Version 20070827
================

- Minor fix for building on multilib Linux x86_64 machines. Thanks to
  Chitlesh Goorah.


Version 20070815
================

- Build fixes for Windows.
- Update library search path on install on Unix systems.


Version 20070813
================

- Fixed erroneous URLs in the help for each program.
- Changed the build chain to use cmake instead of autotools.

Thanks to Mark Wilmott:

- Top level cell is correctly placed within the canvas when using gds2svg.


Version 20070426
================

Thanks to Matt Hopcroft:

- Layers with height=0 were not being processed (should've been
  thickness=0).


Version 20061130
================

- Fixes to the build process.
- Memory stability fixes.

Version 20061012
================

- Fixed compile errors on msys due to u_int16_t being defined as uint16_t.

These changes thanks to Arun Persaud:

- Added simple support for Boxes (they are treated as Boundaries)
- gdsoglviewer uses the config.txt settings to set the initial position.
- gdsoglviewer displays a camera and lookat position which can be used in gds2pov.
- Zero width paths no longer prevent the rest of the GDS2 file being parsed.
- An error in the type of the STYPTABLE record was fixed.

These changes suggested by Frederic Pecourt:

- Added the option of using a camera include file in gds2pov rather than
  calculating the camera position inside the main pov file.

Version 20060301
================

- Changed libgdsto3d long and short types to int32_t and int16_t as appropriate
  problems when long and short change size.

Version 20060228
================

- Fixed gds2pov -b option which wasn't producing any output.

Version 20060227
================

- Added gds2svg
- Fixed other minor problems

Version 0.7.3 (23rd November 2004)
==================================

- Fixed occasional problem with invalid characters being printed in layer
  names. Thanks to Scott Lin.