@@ -34,7 +34,7 @@ extern int verbose_output;
 void printusage()
 {
 	printf("gds2svg  version %s\n", VERSION);
-	printf("Copyright (C) 2005-2007 by Roger Light\nhttp://atchoo.org/gds2pov/\n\n");
+	printf("Copyright (C) 2005-2008 by Roger Light\nhttp://atchoo.org/gds2pov/\n\n");
 	printf("gds2svg comes with ABSOLUTELY NO WARRANTY.  You may distribute gds2svg freely\nas described in the readme.txt distributed with this file.\n\n");
 	printf("gds2svg is a program for converting a GDS2 file to an SVG file.\n\n");
 	printf("Usage: gds2svg [-b] [-c config.txt] [-d] [-g] [-h] [-i input.gds] [-o output.svg] [-p process.txt] [-q] [-t topcell] [-v]\n\n");
