@@ -7,7 +7,6 @@ To Do
 - absolute camera position
 - save camera position from gdsoglviewer for use with gds2pov
 - What if top cell isn't found?
-- Tool to parse a gds file and produce a process file.
 - Allow use of eg. glade2 techfiles as a process file.
 - Should be able to tell whether a gds2 file is empty even if it parsed correctly.
 - Make an example skeleton project.
